# hunspell

./: CMakeLists.txt
src/: CMakeLists.txt
src/hunspell/: CMakeLists.txt
